--- a/daygrade/public/index.html
+++ b/daygrade/public/index.html
@@ -28,6 +28,14 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <!-- <script
+      type="module"
+      src="https://cdn.jsdelivr.net/npm/chart.js/dist/chart.min.js"
+    ></script>
+    <script
+      type="module"
+      src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"
+    ></script> -->
     <div id="root"></div>
     <!--
       This HTML file is a template.
