--- a/daygrade/public/index.html
+++ b/daygrade/public/index.html
@@ -27,9 +27,9 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <!-- <script
-      type="module"
+    <!-- <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script
+      type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/chart.js/dist/chart.min.js"
     ></script>
     <script
