--- a/daygrade/public/index.html
+++ b/daygrade/public/index.html
@@ -16,6 +16,11 @@
     -->
     <link rel="manifest" href="./manifest.json" />
     <link rel="stylesheet" href="../src/index.css" />
+    <link
+      rel="stylesheet"
+      href="node_modules/react-github-contribution-calendar/default.css"
+      type="text/css"
+    />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
