--- a/daygrade/public/index.html
+++ b/daygrade/public/index.html
@@ -38,10 +38,40 @@
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', async () => {
           try {
+            function urlBase64ToUint8Array(base64String) {
+              const padding = '='.repeat((4 - (base64String.length % 4)) % 4);
+              const base64 = (base64String + padding)
+                .replace(/\-/g, '+')
+                .replace(/_/g, '/');
+
+              const rawData = window.atob(base64);
+              const outputArray = new Uint16Array(rawData.length);
+
+              for (let i = 0; i < rawData.length; i++) {
+                outputArray[i] = rawData.charCodeAt(i);
+              }
+              return outputArray;
+            }
+
+            function determineAppServerKey() {
+              const vapidPublicKey =
+                'BP0JTfowmAO0zcSnrVjhqs8BFfhE_EAe5O1VKfThTSbiXxL7TfORwH2wHQXoKH0crYvdHFnevURkFIDGB-viDcs';
+              return urlBase64ToUint8Array(vapidPublicKey);
+            }
             //lets me create my own service worker
-            const registered = await navigator.serviceWorker.register(
-              './serviceworker.js'
-            );
+            const registered = await navigator.serviceWorker
+              .register('./serviceworker.js')
+              .then((response) => {
+                console.warn('response: ', response);
+                return response.pushManager
+                  .getSubscription()
+                  .then((subscription) => {
+                    return response.pushManager.subscribe({
+                      userVisibleOnly: true,
+                      applicationServerKey: determineAppServerKey,
+                    });
+                  });
+              });
             console.log('Service Worker Made: ', registered.scope);
           } catch (error) {
             console.error('Failed: ', error);
